5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1644_1055.log
== SUBMITION (2019-04-11 16:53:45) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
n = float(input())
g = 9.8
r = (v**2 * sin(2*a))/g
if (r >= n):
		      mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- EXECUTION TIME:
0.183236
-- ERROR:
  File "/home/codebench/codes/1644/1055/main.py", line 4
    n = float(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:53:46) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
n = float(input())
g = 9.8
r = (v**2 * sin(2*a))/g
if (r >= n):
		      mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    n = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:54:03) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2 * sin(2*a))/g
if (r >= d):
		      mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:54:05) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2 * sin(2*a))/g
if (r >= d):
		      mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:54:09) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2 * sin(2*a))/g
if (r >= d):
		      mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:55:42) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2 * sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:55:43) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2 * sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:55:44) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2 * sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:55:44) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2 * sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:55:45) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2 * sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:56:22) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2)*sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:56:23) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2)*sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:56:44) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2)*sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:56:45) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2)*sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:56:46) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2)*sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:56:47) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2)*sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:56:48) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2)*sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:56:49) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input())
d = float(input())
g = 9.8
r = (v**2)*sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:57:09) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input()))
d = float(input())
g = 9.8
r = (v**2)*sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 6
    r = (v**2)*sin(2*a))/g
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:57:15) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input()))
d = float(input())
g = 9.8
r = (v**2)*sin(2*a)/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- OUTPUT:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:57:22) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input()))
d = float(input())
g = 9.8
r = ((v**2)*sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- OUTPUT:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:57:24) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input()))
d = float(input())
g = 9.8
r = ((v**2)*sin(2*a))/g
if (r >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- EXECUTION TIME:
0.133789
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
nao
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:57:31) 
-- CODE:
from math import*
v = float(input())
a = radians(float(input()))
d = float(input())
g = 9.8
r = ((v**2)*sin(2*a))/g
if (r+0.1 >= d):
	  mensagem = "sim"
else:
	  mensagem = "nao"
print(mensagem)
-- EXECUTION TIME:
0.136721
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
